# karto

./: AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/scripts/: generate-latest-json.mjs
.github/workflows/: ci.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
