[package]
name = "karto"
version = "0.1.0"
description = "A lightweight Kubernetes desktop browser"
authors = ["Karto"]
edition = "2021"

[lib]
name = "karto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
k8s-openapi = { version = "0.26", features = ["latest"] }
futures-util = "0.3"
kube = { version = "2.0", features = ["client", "config", "derive", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
